--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,37 @@ services:
       - 9200:9200
     networks:
       - grafanabtc
+    external_links:
+      - elasticsearch:elasticsearch
+      - grafana:grafana
+      - kibana:kibana
+
+  grafana:
+     image: grafana/grafana
+     container_name: grafana
+
+     ports:
+       - 3000:3000
+     networks:
+       - grafanabtc
+     external_links:
+      - elasticsearch:elasticsearch
+      - grafana:grafana
+      - kibana:kibana
+
+  kibana:
+    image: kibana:7.6.2
+    container_name: kibana
+
+    ports:
+      - 5601:5601
+    networks: 
+      - grafanabtc
+    external_links:
+      - elasticsearch:elasticsearch
+      - grafana:grafana
+      - kibana:kibana
+
 
 volumes:
   data_elasticsearch: 
@@ -25,4 +56,5 @@ volumes:
 
 networks:
   grafanabtc:
-    driver: bridge   
+    driver: bridge  
+  
